--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,7 +77,7 @@
 }
 
 .markdown blockquote {
-  @apply border-l-4 italic pl-5 text-gray-500 border-gray-500 dark:border-gray-50 dark:text-gray-50;
+  @apply border-l-4 pl-5 text-gray-500 border-gray-500 dark:border-gray-300 dark:text-gray-300;
 }
 
 .markdown iframe {
