--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,7 @@
 
 /* 強調コード */
 .markdown code {
-  @apply inline-block text-base italic p-0.5 m-0.5 rounded-md bg-gray-200 text-pink-600;
+  @apply text-xs p-1 m-1 rounded-md bg-gray-200 text-pink-600;
 }
 
 .markdown a {
