--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,7 +65,7 @@
 }
 
 .markdown ul {
-  @apply pl-[5%] py-3;
+  @apply pl-8 py-3;
 }
 
 .markdown ul li {
@@ -73,7 +73,7 @@
 }
 
 .markdown ol {
-  @apply pl-[5%] py-3;
+  @apply pl-8 py-3;
 }
 
 .markdown ol li {
@@ -85,7 +85,7 @@
 }
 
 .markdown blockquote {
-  @apply border-l-4 pl-5 text-gray-500 border-gray-500 dark:border-gray-300 dark:text-gray-300;
+  @apply border-l-4 pl-5 tbpc:pl-3 tbpc:ml-1 text-gray-500 border-gray-500 dark:border-gray-300 dark:text-gray-300;
 }
 
 .markdown iframe {
